# dev-vector

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/presets/: CMakeGenericPresets.json
docs/: code_guidelines.md
include/: vector.hpp
src/: calculator.cpp
tests/: calculator.test.cpp  vector.test.cpp
